enum Genre {
    FICTION,
    DRAMA,
    FANTASY,
    MYSTERY
}
