public enum PhysicalCondition {
    NEW,
    GOOD,
    WORN
}
